添加测试代码

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,6 @@
 {
   "ranking_like": "Like",
   "ranking_hot": "Hot",
-  "ranking_favorite": "Favorite"
+  "ranking_favorite": "Favorite",
+  "theme_title": "Theme"
 }
