--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,5 +1,6 @@
 {
   "ranking_like": "最热",
   "ranking_hot": "最新",
-  "ranking_favorite": "收藏"
+  "ranking_favorite": "收藏",
+  "theme_title":"主题"
 }
